# particle-view

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
src/controllers/: AnimationController.cpp  AnimationController.h  AppContext.cpp  AppContext.h  BaseObservable.h  CMakeLists.txt  Observable.h  ObservableReference.h  RenderController.cpp  RenderController.h  StoryController.cpp  StoryController.h  TransformController.cpp  TransformController.h  ViewController.cpp  ViewController.h
src/controllers/animation/: AnimationStrategy.h  LinearAnimationStrategy.cpp  LinearAnimationStrategy.h  StepAnimationStrategy.cpp  StepAnimationStrategy.h
src/graphics/: AxisRenderer.cpp  AxisRenderer.h  CMakeLists.txt  ParticleRenderer.cpp  ParticleRenderer.h  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  SkeletonParticleRenderer.cpp  SkeletonParticleRenderer.h  SolidParticleRenderer.cpp  SolidParticleRenderer.h  VelocityRenderer.cpp  VelocityRenderer.h
src/loaders/: CMakeLists.txt  CustomLoader.cpp  CustomLoader.h  StoryLoader.cpp  StoryLoader.h  (+2 more)
src/widgets/: AppWidget.cpp  AppWidget.h  AppWindow.cpp  AppWindow.h  CMakeLists.txt  GraphicsWidget.cpp  GraphicsWidget.h  TimeSliderWidget.cpp  TimeSliderWidget.h  ToolPanelWidget.cpp  ToolPanelWidget.h
src/widgets/controls/: AnimationControls.cpp  AnimationControls.h  AnimationSpeedControls.cpp  AnimationSpeedControls.h  AnimationStrategyControls.cpp  AnimationStrategyControls.h  AnimationTimeControls.cpp  AnimationTimeControls.h  ControlSection.cpp  ControlSection.h  NumericControl.cpp  NumericControl.h  OriginViewControls.cpp  OriginViewControls.h  RotationViewControls.cpp  RotationViewControls.h  ScaleViewControls.cpp  ScaleViewControls.h  SceneControlPanel.cpp  SceneControlPanel.h  TimeAnimationControls.cpp  TimeAnimationControls.h  ToolControls.cpp  ToolControls.h  TranslationViewControls.cpp  TranslationViewControls.h  ViewControls.cpp  ViewControls.h  ViewOriginControls.cpp  ViewOriginControls.h  ViewRotationControls.cpp  ViewRotationControls.h  ViewScaleControls.cpp  ViewScaleControls.h  ViewTranslationControls.cpp  ViewTranslationControls.h
src/widgets/loader/: StoryLoaderAddPropertyDialog.cpp  StoryLoaderAddPropertyDialog.h  StoryLoaderDialog.cpp  StoryLoaderDialog.h  StoryLoaderPropertyGrid.cpp  StoryLoaderPropertyGrid.h  StoryLoaderPropertyRow.cpp  StoryLoaderPropertyRow.h  StoryLoaderScalarPropertyRow.cpp  StoryLoaderScalarPropertyRow.h  StoryLoaderVectorPropertyRow.cpp  StoryLoaderVectorPropertyRow.h
src/widgets/toolpanel/: TransformModesWidget.cpp  TransformModesWidget.h
src/widgets/utils/: KeyEventFilter.cpp  KeyEventFilter.h
(+11 files in other folders)
